# MyPlayer

./: .gitignore  gradle.properties  settings.gradle
Test/: build.gradle  proguard-rules.pro
Test/src/androidTest/java/com/leon/myapplication/: ApplicationTest.java
Test/src/main/: AndroidManifest.xml
Test/src/main/java/com/leon/myapplication/: MainActivity.java
Test/src/main/jni/: ffmpegtest.cpp
Test/src/main/res/layout/: activity_main.xml
Test/src/test/java/com/leon/myapplication/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle  ffplay.cpp
app/distribution/ffmpeg/: Android.mk
app/src/androidTest/java/com/leon/myplayer/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  AudioEngine.cpp  AudioEngine.h  FFPlayer.cpp  FFPlayer.h  JNIHelp.cpp  JNIHelp.h  MessageQueue.cpp  MessageQueue.h  ffplayerJni.cpp
app/src/main/java/com/leon/myplayer/: MainActivity.java  TestActivity.java
app/src/main/java/com/leon/player/: FFmpegPlayer.java
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/jni/: Application.mk
app/src/main/jni/src/: AudioEngine.cpp  AudioEngine.h  FFPlayer.cpp  FFPlayer.h  MessageQueue.cpp  MessageQueue.h  ffplay.cpp  ffplayerJni.cpp
app/src/main/res/layout/: activity_main.xml  activity_test.xml  content_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/leon/myplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sdl_demo/: build.gradle
sdl_demo/src/androidTest/java/com/leon/sdl_demo/: ApplicationTest.java
sdl_demo/src/main/: AndroidManifest.xml
sdl_demo/src/main/java/com/leon/sdl_demo/: MainActivity.java
sdl_demo/src/main/jni/src/: ffplay.cpp  log.h
sdl_demo/src/main/res/layout/: activity_main.xml
sdl_demo/src/main/res/values/: strings.xml
sdl_demo/src/test/java/com/leon/sdl_demo/: ExampleUnitTest.java
